<resources>
    <string name="app_name">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="nombre_registro">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="correo">Correo</string>
    <string name="Direccion">Dirección</string>
    <string name="confirmar_Contraseña">Confirmar Contraseña</string>
    <string name="fecha_nacimiento_R">Fecha De Nacimiento</string>
    <string name="body">Cuerpo de la consulta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>