<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/F_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_login"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/heigth"
            android:background="@drawable/usuario_login_foreground"
            android:layout_gravity="center">
        </ImageView>

        <TextView
            android:text="@string/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>


        <EditText
            android:id="@+id/User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType ="textPersonName"
            />

        <TextView
            android:text="@string/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </TextView>

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebPassword"

            >
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/btn_ingresar"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>